# hyde

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .hyde-config  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  generate_test_files.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md
.github/workflows/: tagged-release.yml
docs/: Gemfile  _config.yml  about.md  index.html
docs/_includes/: associated_classes.html  associated_enumerations.html  associated_functions.html  associated_libraries.html  associated_methods.html  breadcrumb.html  defined_in_header.html  derive_family.html  head.html  theme.html
docs/_posts/: 2018-10-30-welcome.markdown
docs/_sass/: _overrides-dark.scss  _overrides-light.scss  _overrides.scss
docs/assets/scripts/: indices.js
docs/css/: main-dark.scss  main-light.scss
docs/libraries/: index.md
docs/libraries/classes.cpp/: index.md
docs/libraries/classes.cpp/class_example/: color.md  index.md  m_class_example.md  m_deprecated.md  m_deprecated_with_message.md  m_member_function.md  m_member_function_trailing_return_type.md  m_overloaded.md  m_static_method.md  m_template_member_function.md
docs/libraries/classes.cpp/class_example/nested_class_example/: index.md  m_nested_class_example.md  m_~nested_class_example.md
docs/libraries/classes.cpp/partial_specialization_.4b7bfe45/: index.md
docs/libraries/classes.cpp/partial_specialization_.edfbc14d/: index.md
docs/libraries/classes.cpp/specialization_example3.ed9d8cc7/: index.md  m_as_tuple.md
docs/libraries/classes.cpp/specialization_example3CT3E/: index.md  m_as_tuple.md
docs/libraries/classes.cpp/specialization_example3Cfloat3E/: index.md  m_as_tuple.md
docs/libraries/comments.cpp/: f_template_function.md  index.md
docs/libraries/comments.cpp/compiler_generated/: index.md  m_assign.md  m_compiler_generated.md  m_operator3D.md
docs/libraries/comments.cpp/some_other_struct/: index.md  m_operator3D.md  m_some_other_struct.md  m_virtual_function.md  m_~some_other_struct.md
docs/libraries/comments.cpp/some_struct/: index.md  m_operator3D.md  m_some_function.md  m_some_struct.md  m_virtual_function.md  m_~some_struct.md
docs/libraries/enums.cpp/: color_channel.md  index.md  untyped.md
docs/libraries/functions.cpp/: f_binary_function_example.md  f_nullary_function_example.md  f_overloaded.md  f_static_auto_function_example.md  f_static_function_example.md  f_static_trailing_type_function_example.md  f_template_function_example.md  index.md
docs/libraries/namespaces.cpp/: f_function.md  index.md
docs/libraries/point.cpp/: index.md
docs/libraries/point.cpp/point3CT3E/: f_operator-.md  f_operator213D.md  f_operator3D3D.md  index.md  m_operator-3D.md  m_origin.md  m_point3CT3E.md
docs/libraries/typedef_and_alias.cpp/: index.md
docs/libraries/typedef_and_alias.cpp/template_example3CT2C20U3E/: index.md
docs/libraries/typedef_and_alias.cpp/template_example_instantiator/: index.md
emitters/: yaml_base_emitter.cpp  yaml_base_emitter.hpp  yaml_base_emitter_fwd.hpp  yaml_class_emitter.cpp  yaml_class_emitter.hpp  yaml_enum_emitter.cpp  yaml_enum_emitter.hpp  yaml_function_emitter.cpp  yaml_function_emitter.hpp  yaml_library_emitter.cpp  yaml_library_emitter.hpp  yaml_sourcefile_emitter.cpp  yaml_sourcefile_emitter.hpp
include/: _clang_include_prefix.hpp  _clang_include_suffix.hpp  autodetect.hpp  config.hpp  filesystem.hpp  json.hpp  json_fwd.hpp  output_yaml.hpp
matchers/: class_matcher.cpp  class_matcher.hpp  enum_matcher.cpp  enum_matcher.hpp  function_matcher.cpp  function_matcher.hpp  matcher_fwd.hpp  namespace_matcher.cpp  namespace_matcher.hpp  typealias_matcher.cpp  typealias_matcher.hpp  typedef_matcher.cpp  typedef_matcher.hpp  utilities.cpp  utilities.hpp
sources/: autodetect.cpp  main.cpp  output_yaml.cpp
test_files/: classes.cpp  comments.cpp  enums.cpp  functions.cpp  namespaces.cpp  packaged_task.cpp  pod.cpp  point.cpp  template_specialization.cpp  templates.cpp  typedef_and_alias.cpp
test_site/: _config.yml
test_site/libraries/: index.md
